--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -37,7 +37,16 @@
       <div class="navbar-header navbar-right">
         <ul class="nav navbar-nav">
           <li>
-            <a [routerLink]="['user/profile']">Welcome Lucas</a>
+            <a
+              *ngIf="!authService.isAuthenticated()"
+              [routerLink]="['user/login']"
+              >Login</a
+            >
+            <a
+              *ngIf="authService.isAuthenticated()"
+              [routerLink]="['user/profile']"
+              >Welcome Lucas</a
+            >
           </li>
         </ul>
       </div>
