--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -1,9 +1,38 @@
-<h1>Edit your Profile</h1>
-<hr />
-<div class="col-md-6">
-  <h3>[Edit profile form will go here]</h3>
-  <br />
-  <br />
-  <button type="submit" class="btn btn-primary">Save</button>
-  <button type="submit" class="btn btn-default">Cancel</button>
+<div>
+  <h1>Edit Your Profile</h1>
+  <hr />
+  <div class="col-md-4">
+    <form
+      [formGroup]="profileForm"
+      autocomplete="off"
+      novalidate
+      (ngSubmit)="save(profileForm.value)"
+    >
+      <div class="form-group">
+        <label for="firstName">First Name:</label>
+        <input
+          formGroupName="firstName"
+          id="firstName"
+          type="text"
+          class="form-control"
+          placeholder="{{ firstName ? firstName.value : 'First Name...' }}"
+        />
+      </div>
+      <div class="form-group">
+        <label for="lastName">Last Name:</label>
+        <input
+          formGroupName="lastName"
+          id="lastName"
+          type="text"
+          class="form-control"
+          placeholder="{{ lastName ? lastName.value : 'First Name...' }}"
+        />
+      </div>
+
+      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="button" class="btn btn-default" (click)="cancel()">
+        Cancel
+      </button>
+    </form>
+  </div>
 </div>
