--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -4,34 +4,53 @@
   <div class="col-md-4">
     <form
       [formGroup]="profileForm"
+      (ngSubmit)="saveProfile(profileForm.value)"
       autocomplete="off"
       novalidate
-      (ngSubmit)="save(profileForm.value)"
     >
-      <div class="form-group">
+      <div class="form-group" [ngClass]="{ error: !validateFirstName() }">
         <label for="firstName">First Name:</label>
+        <em
+          *ngIf="
+            !validateFirstName() &&
+            profileForm.controls.firstName.errors.required
+          "
+          >Required</em
+        >
+        <em
+          *ngIf="
+            !validateFirstName() &&
+            profileForm.controls.firstName.errors.pattern
+          "
+          >Must start with a letter</em
+        >
         <input
-          formGroupName="firstName"
+          formControlName="firstName"
           id="firstName"
           type="text"
           class="form-control"
-          placeholder="{{ firstName ? firstName.value : 'First Name...' }}"
+          placeholder="First Name..."
         />
       </div>
-      <div class="form-group">
+      <div class="form-group" [ngClass]="{ error: !validateLastName() }">
         <label for="lastName">Last Name:</label>
+        <em *ngIf="!validateLastName()">Required</em>
         <input
-          formGroupName="lastName"
+          formControlName="lastName"
           id="lastName"
           type="text"
           class="form-control"
-          placeholder="{{ lastName ? lastName.value : 'First Name...' }}"
+          placeholder="Last Name..."
         />
       </div>
 
       <button type="submit" class="btn btn-primary">Save</button>
-      <button type="button" class="btn btn-default" (click)="cancel()">
+      <button type="button" (click)="cancel()" class="btn btn-default">
         Cancel
+      </button>
+
+      <button type="button" style="float: right" class="btn btn-warning">
+        Logout
       </button>
     </form>
   </div>
